gitops/s.konst.fish/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sdot
  name: sdot
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: sdot
  template:
    metadata:
      labels:
        app: sdot
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: sdot-config
      - name: nfs-mount
        hostPath:
          path: /stor/s.konst.fish
          type: Directory
      containers:
      - name: sdot
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http-tcp
          protocol: TCP 
        resources: 
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
        - mountPath: /usr/share/nginx/html
          name: nfs-mount
      dnsPolicy: ClusterFirst
      restartPolicy: Always
