gitops/s.konst.fish/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storagekf
spec:
  selector:
    app: storagekf
  ports:
    - protocol: TCP
      name: http-tcp
      port: 80
      targetPort: 80
