gitops/s.konst.fish/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdot
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    external-dns.alpha.kubernetes.io/hostname: "s.konst.fish"
spec:
  tls:
  - hosts:
    - s.konst.fish
    secretName: sdot-tls
  ingressClassName: nginx
  rules:
  - host: "s.konst.fish"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sdot
            port:
              number: 80
